--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
+		"@nuxt/ui": "^3.0.2",
+		"@pinia/nuxt": "^0.10.1",
+		"@tailwindcss/vite": "^4.0.17",
 		"nuxt": "^3.16.1",
+		"pinia": "^3.0.1",
+		"pinia-plugin-persistedstate": "^4.2.0",
+		"tailwindcss": "^4.0.17",
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.0"
 	},
